--- a/src/main/webapp/resources/CSS/site.css
+++ b/src/main/webapp/resources/CSS/site.css
@@ -2,9 +2,14 @@
 
     background-color: yellowgreen;
     font-weight: 100 ;
+}
 .post-date{
 
     color:gray;
 
 }
+.post{
+
+    padding-left: 0px;
+
 }
