--- a/src/main/webapp/resources/CSS/site.css
+++ b/src/main/webapp/resources/CSS/site.css
@@ -1,15 +1,20 @@
 .author-name{
-
-    background-color: yellowgreen;
-    font-weight: 100 ;
+    background-color: darkseagreen;
 }
+
 .post-date{
-
     color:gray;
-
 }
+
+.comment{
+    margin-bottom: 20px;
+}
+
 .post{
-
     padding-left: 0px;
+    padding-right: 0px;
+}
 
+textarea {
+    resize: none;
 }
